applications/finance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance
  labels:
    app.kubernetes.io/name: finance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: finance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: finance
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: finance
          image: ghcr.io/italo-jsm/finance:sha-0d1267d
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
