applications/finance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance
  labels:
    app.kubernetes.io/name: finance
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: finance
